# gestion_de_facturas_gfac

./: .dockerignore  .gitignore  Dockerfile  README.md  SOLUTION.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 53f0471c5fc0_dian_traceability.py  9b1f0d5a2f31_notifications.py  c8e4a1b2d3f4_org_invoice_collection_statuses.py  e3a1c0d9b2e5_organization_portal_path.py  f702b029fcc1_billing_subscriptions.py  f72dc0a687f8_initial_schema.py
docs/: GUIA_BUENAS_PRACTICAS.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.jsx  api.js  main.jsx
src/: __init__.py  auth.py  billing.py  config.py  db.py  dependencies.py  extraction.py  extraction_gemini.py  invoice_status_constants.py  invoice_statuses.py  main.py  models.py  notifications.py  org_portal.py  schemas.py
src/dian/: __init__.py  audit.py  audit_excel.py  events.py  validation.py
src/reporting/: __init__.py  chart_images.py  exports.py  fetch.py  scope.py  stats.py
src/routers/: auth.py  billing.py  fiscal.py  invoices.py  notifications.py  organizations.py  platform_insights.py  public_signup.py  reports.py  tasks.py  users.py
src/sgf_api.egg-info/: PKG-INFO  (+3 more)
tests/: __init__.py  conftest.py  test_auth.py  test_billing.py  test_extraction.py  test_invoices.py  test_notifications.py  test_organizations.py  test_platform_organization_invoices.py  test_security_hardening.py  test_tasks.py  test_upload.py  test_users.py
(+81 files in other folders)
